--- a/index_gus.html
+++ b/index_gus.html
@@ -74,11 +74,11 @@
                 ¿Qué podemos hacer si nos enfrentamos a una parcela cada vez menos productiva? ¿Cómo podemos encontrar un balance que beneficie también al medio ambiente?
             </p>
 
-            <p>
-            <span class="tituloCuadrado">
+            <div>
+            <div class="tituloCuadrado">
                 ¡CONOZCAMOS ESTAS ONCE PRÁCTICAS SOSTENIBLES!
-            </span>
-            </p>
+            </div>
+            </div>
         </div>
     </div>
     <!----- FOTOGRAMA 03 ----->
@@ -95,22 +95,22 @@
                 <img src="img/fot3/sello3A.png" style="max-width: 140px;"/>
             </div>
             <div style="padding: 20px; text-align: justify;">
-                <p>
-            <span class="tituloCuadrado">
-                RENOVACIÓN DE CAFETALES <br/>
+                <div>
+            <div class="tituloCuadrado">
+                RENOVACIÓN DE CAFETALES
                 MEDIANTE SIEMBRAS NUEVAS
-            </span>
-                </p>
+            </div>
+                </div>
                 <p class="textoCudadrado">
                     Consiste en la reinstalación de plantaciones de café en áreas
                     que anteriormente fueron cafetales, pero que dejaron de serlo
                     debido a diversos factores, entre ellos, la baja productividad,
                     el ataque de plagas y enfermedades, u otros.
                 </p>
-                <p>
-            <span class="tituloCuadrado">
+                <div>
+            <div class="tituloCuadrado">
                 VENTAJAS
-            </span>
+            </div>
                 <ul class="textoCudadrado">
                     <li>Incremento de productividad.</li>
                     <li>Mejor diseño de la plantación e instalación de sombra</li>
@@ -120,7 +120,7 @@
                     <li>Permite introducir variedades de alta calidad en taza y</li>
                     <li>resistentes a plagas y enfermedades.</li>
                 </ul>
-                </p>
+                </div>
                 <p>
                     <a href="pdf/fot3 - Renovacion de cafetales mediante siembras nuevas.pdf" target="_blank" ><img src="img/boton/boton-celeste.png" style="max-width: 175px;" /> </a>
                 </p>
@@ -142,22 +142,22 @@
                 <img src="img/fot4/sello3A.png" style="max-width: 140px;" />
             </div>
             <div style="padding: 20px;text-align: justify;">
-                <p class="textoCudadrado">
-                            <span class="tituloCuadrado">
-                                COBERTURAS <br/>
+                <div class="textoCudadrado">
+                            <div class="tituloCuadrado">
+                                COBERTURAS
                                 VIVAS SUPERFICIALES
-                            </span>
-                </p>
+                            </div>
+                </div>
                 <p class="textoCudadrado">
                     Las coberturas vivas superficiales son plantas que se asocian
                     con cultivos con la finalidad de proteger los suelos de la
                     erosión y recuperar su fertilidad. Funcionan como fuente
                     proveedora de nutrientes y materia orgánica.
                 </p>
-                <p class="textoCudadrado">
-                        <span class="tituloCuadrado">
+                <div class="textoCudadrado">
+                        <div class="tituloCuadrado">
                             VENTAJAS
-                        </span>
+                        </div>
                 <ul class="textoCudadrado">
                     <li>Permite la recuperación productiva de los suelos degradados.</li>
                     <li>Fijación de nitrógeno en el suelo.</li>
@@ -168,9 +168,9 @@
                     <li>Ayuda a controlar las malezas.</li>
                 </ul>
                 <p>
-                    <img src="img/boton/boton-celeste.png" style="max-width: 175px;" />
+                    <a href="pdf/fot4 - Coberturas vivas superficiales.pdf" target="_blank" ><img src="img/boton/boton-celeste.png" style="max-width: 175px;" /></a>
                 </p>
-                </p>
+                </div>
             </div>
         </div>
     </div>
@@ -188,12 +188,12 @@
                 <img src="img/fot5/sello1A.png" style="max-width: 140px;" />
             </div>
             <div style="padding: 20px;text-align: justify;">
-                <p>
-                <span class="tituloCuadrado">
-                    INCORPORACIÓN DE ÁRBOLES <br>
+                <div>
+                <div class="tituloCuadrado">
+                    INCORPORACIÓN DE ÁRBOLES
                     DE SOMBRA EN LOS CAFETALES
-                </span>
-                </p>
+                </div>
+                </div>
 
                 <p class="textoCudadrado">
                     Consiste en la instalación de árboles para dar sombra al café.
@@ -206,10 +206,10 @@
                 </ul>
                 </p>
 
-                <p>
-                <span class="tituloCuadrado">
+                <div>
+                <div class="tituloCuadrado">
                     VENTAJAS
-                </span>
+                </div>
 
                 <ul class="textoCudadrado">
                     <li>Mejora de la calidad del café y a la reducción de plagas y enfermedades.</li>
@@ -221,7 +221,7 @@
                 <p>
                     <a href="pdf/fot5 - incorporacion de arboles.pdf" target="_blank"><img src="img/boton/boton-rosa.png" style="max-width: 175px;" /></a>
                 </p>
-                </p>
+                </div>
             </div>
         </div>
     </div>
@@ -239,18 +239,18 @@
                 <img src="img/fot6/sello1A.png" style="max-width: 140px;" />
             </div>
             <div style="padding: 20px;text-align: justify;">
-                <span class="tituloCuadrado">
-                    PRODUCCIÓN DE ABONOS ORGÁNICOS<br>
-                    A TRAVÉS DE MICROORGANISMOS<br>
+                <div class="tituloCuadrado">
+                    PRODUCCIÓN DE ABONOS ORGÁNICOS
+                    A TRAVÉS DE MICROORGANISMOS
                     EFICIENTES (EM)
-            </span>
+            </div>
                 <p class="textoCudadrado">
                     Esta tecnología consiste en la descomposición de residuos orgánicos producidos en la finca a través de la introducción de EM que aceleran el proceso de descomposición. Como resultado se obtiene abono orgánico (compost y biol) en un periodo de 25 a 45 días.
                 </p>
 
-                <span class="tituloCuadrado">
+                <div class="tituloCuadrado">
                     VENTAJAS
-            </span>
+            </div>
                 <p>
                 <ul class="textoCudadrado">
                     <li>Aprovecha residuos orgánicos de las fincas.</li>
@@ -280,17 +280,17 @@
                 <img src="img/fot7/sello3A.png" style="max-width: 140px;" />
             </div>
             <div style="padding: 20px;text-align: justify;">
-                <span class="tituloCuadrado">
-                ABONAMIENTO ORGÁNICO DEL CAFÉ<br>
-                    PLANTADO Y CAFETALES RENOVADOS <br>
-            </span>
+                <div class="tituloCuadrado">
+                ABONAMIENTO ORGÁNICO DEL CAFÉ
+                    PLANTADO Y CAFETALES RENOVADOS
+            </div>
                 <p class="textoCudadrado">
                     Consiste en aplicar al suelo fertilizantes orgánicos producidos por los propios productores en sus fincas, complementando con fertilizantes orgánicos externos de ser necesario. Esto se hace con la finalidad de suministrar al cultivo de café los nutrientes necesarios de forma sostenible. La primera aplicación se realiza al inicio de la floración. La segunda en el llenado del grano y la ultima un mes antes de la etapa de maduración del fruto.
                 </p>
 
-                <span class="tituloCuadrado">
+                <div class="tituloCuadrado">
                     VENTAJAS
-            </span>
+            </div>
                 <p>
                 <ul class="textoCudadrado">
                     <li>Reduce los costos de abonamiento en 30% - 40%.</li>
@@ -321,16 +321,16 @@
                 <img src="img/fot8/sello1A.png" style="max-width: 140px;" />
             </div>
             <div style="padding: 20px;text-align: justify;">
-                <span class="tituloCuadrado">
+                <div class="tituloCuadrado">
                 TERRAZAS DE FORMACIÓN LENTA
-            </span>
+            </div>
                 <p class="textoCudadrado">
                     Son terraplenes formados de manera progresiva en los surcos de café por efecto del arrastre y acumulación de suelo. Estas terrazas se pueden construir sin la necesidad de remover el terreno, utilizando vástagos de plátano, tallos y ramas provenientes de la poda de café y árboles de sombra.
                 </p>
 
-                <span class="tituloCuadrado">
+                <div class="tituloCuadrado">
                     VENTAJAS
-            </span>
+            </div>
                 <p>
                 <ul class="textoCudadrado">
                     <li>Reduce los costos de abonamiento de 30% a 40%.</li>
@@ -360,18 +360,18 @@
                 <img src="img/fot9/sello2A.png" style="max-width: 140px;" />
             </div>
             <div style="padding: 20px;text-align: justify;">
-                <span class="tituloCuadrado">
-                CONTROL ORGÁNICO Y BIOLÓGICO<br>
-                    DE LAS PLAGAS Y ENFERMEDADES<br>
+                <div class="tituloCuadrado">
+                CONTROL ORGÁNICO Y BIOLÓGICO
+                    DE LAS PLAGAS Y ENFERMEDADES
                     DEL CAFÉ
-            </span>
+            </div>
                 <p class="textoCudadrado">
                     El control orgánico se refiere al uso de insumos químicos provenientes de fuentes naturales y de algunas plantas que tienen propiedades insecticidas, fungicidas y nematicidas. Por otro lado, el control biológico es un método que emplea depredadores (organismos vivos) para controlar plagas y enfermedades.
                 </p>
 
-                <span class="tituloCuadrado">
+                <div class="tituloCuadrado">
                     VENTAJAS
-            </span>
+            </div>
                 <p>
                 <ul class="textoCudadrado">
                     <li>Son productos naturales y forman parte del ecosistema.</li>
@@ -401,15 +401,15 @@
                 <img src="img/fot10/sello2A.png" style="max-width: 140px;" />
             </div>
             <div style="padding: 20px;text-align: justify;">
-                <span class="tituloCuadrado">
+                <div class="tituloCuadrado">
                 COSECHA SELECTIVA DE CAFÉ
-            </span>
+            </div>
                 <p class="textoCudadrado">
                     Consiste en recolectar solo los frutos o cerezos de café completamente maduros. Para ello, se descartan los frutos secos, sobremaduros, pintones y verdes. Es necesario realizar una evaluación del punto óptimo de maduración del fruto de café, el cual debe ser mayor o igual que el 80% de granos completamente maduros.
                 </p>
-                <span class="tituloCuadrado">
+                <div class="tituloCuadrado">
                     VENTAJAS
-            </span>
+            </div>
                 <p>
                 <ul class="textoCudadrado">
                     <li>Incrementa la calidad física y en taza del café.</li>
@@ -439,16 +439,16 @@
                 <img src="img/fot11/sello3A.png" style="max-width: 140px;" />
             </div>
             <div style="padding: 20px;text-align: justify;">
-                <span class="tituloCuadrado">
-                RENOVACIÓN DE CAFETALES<br>
+                <div class="tituloCuadrado">
+                RENOVACIÓN DE CAFETALES
                     MEDIANTE PODA SISTÉMICA
-            </span>
+            </div>
                 <p class="textoCudadrado">
                     Consiste en la aplicación de la poda a un grupo de plantas. Puede hacerse por surcos, lotes o de forma secuencial, y en ciclos de renovación de 3, 4, 5 o 6 años. De esta manera, se incorpora materia orgánica al suelo, incrementando sus niveles de fertilidad. La duración del ciclo de renovación depende de la edad, densidad de siembra y la localidad. Puede realizarse a partir de los 7 años de edad de la plantación de café.
                 </p>
-                <span class="tituloCuadrado">
+                <div class="tituloCuadrado">
                     VENTAJAS
-            </span>
+            </div>
                 <p>
                 <ul class="textoCudadrado">
                     <li>Reduce los costos.</li>
@@ -473,16 +473,16 @@
                 <img src="img/fot12/sello2A.png" style="max-width: 140px;" />
             </div>
             <div style="padding: 20px;text-align: justify;">
-                <span class="tituloCuadrado">
-                SISTEMA DE BENEFICIO HÚMEDO<br>
+                <div class="tituloCuadrado">
+                SISTEMA DE BENEFICIO HÚMEDO
                     DE CAFÉ (USO DE TANQUE TINA)
-            </span>
+            </div>
                 <p class="textoCudadrado">
                     Consiste en implementar la infraestructura básica en cada finca para procesar el café cerezo y transformarlo en café pergamino seco, listo para la comercialización. Dicha tecnología involucra 3 etapas: el manejo agronómico, cosecha del cerezo y la post cosecha.
                 </p>
-                <span class="tituloCuadrado">
+                <div class="tituloCuadrado">
                     VENTAJAS
-            </span>
+            </div>
                 <p>
                 <ul class="textoCudadrado">
                     <li>Incrementa la calidad física de 54% a 75%, y la calidad en taza de 78 puntos a 84 puntos.</li>
@@ -512,16 +512,16 @@
                 <img src="img/fot13/sello1A.png" style="max-width: 140px;" />
             </div>
             <div style="padding: 20px;text-align: justify;">
-                <span class="tituloCuadrado">
-                TRATAMIENTO DE AGUAS MIELES<br>
+                <div class="tituloCuadrado">
+                TRATAMIENTO DE AGUAS MIELES
                     PARA REDUCIR EMISIONES
-            </span>
+            </div>
                 <p class="textoCudadrado">
                     Alternativa para reducir las emisiones de metano, originado principalmente durante el proceso de postcosecha. Se realiza en dos etapas de depuración biológica, utilizando dos pozas o lagunas de tratamiento.
                 </p>
-                <span class="tituloCuadrado">
+                <div class="tituloCuadrado">
                     VENTAJAS
-            </span>
+            </div>
                 <p>
                 <ul class="textoCudadrado">
                     <li>Reduce las emisiones de GEI producidos durante el proceso de postcosecha del café.</li>
@@ -548,15 +548,15 @@
                 <img src="img/fot14/sello1A.png" style="max-width: 140px;" />
             </div>
             <div style="padding: 20px;text-align: justify;">
-                <span class="tituloCuadrado">
+                <div class="tituloCuadrado">
                 SECADOR SOLAR
-            </span>
+            </div>
                 <p class="textoCudadrado">
                     Consiste en una estructura de madera o metal con cubierta preferentemente de calamina traslúcida, piso de madera o cemento, y bandejas en las cuales se deposita el café lavado para el secado. Sus dimensiones dependen del volumen de producción. Por ejemplo: para una producción de 100 quintales, se requiere una área de 10x5m con sus respectivas bandejas o piso.
                 </p>
-                <span class="tituloCuadrado">
+                <div class="tituloCuadrado">
                     VENTAJAS
-            </span>
+            </div>
                 <p>
                 <ul class="textoCudadrado">
                     <li>Reducción del tiempo de secado del café de 15 a 6 días en promedio.</li>
